--- a/demos/demo3-foodthrowing/CMakeLists.txt
+++ b/demos/demo3-foodthrowing/CMakeLists.txt
@@ -4,7 +4,7 @@ add_executable(${PROJECT_NAME}.elf
         src/main.cpp
         src/food_scene.cpp
         src/food_scene.h
-        src/avatar.h src/bullet_data.h src/bullet.cpp src/bullet.h)
+        src/avatar.h src/bullet_data.h src/bullet.cpp src/bullet.h ../Eigen_test1/src/myScene.h ../Eigen_test1/src/myScene.cpp)
 
 target_link_libraries(${PROJECT_NAME}.elf gba-sprite-engine)
 
